# succinct

./: .gitignore  CMakeLists.txt  README.md  bit_vector.hpp  bp_vector.cpp  bp_vector.hpp  broadword.hpp  cartesian_tree.hpp  darray.hpp  darray64.hpp  elias_fano.hpp  elias_fano_compressed_list.hpp  elias_fano_list.hpp  forward_enumerator.hpp  gamma_bit_vector.hpp  gamma_vector.hpp  intrinsics.hpp  mappable_vector.hpp  mapper.hpp  nibble_vector.hpp  rs_bit_vector.cpp  rs_bit_vector.hpp  succinct_config.hpp.in  test_bit_vector.cpp  test_bp_vector.cpp  test_bp_vector_common.hpp  test_bp_vector_rmq.cpp  test_cartesian_tree.cpp  test_common.hpp  test_darray.cpp  test_elias_fano.cpp  test_elias_fano_compressed_list.cpp  test_gamma_bit_vector.cpp  test_gamma_vector.cpp  test_mapper.cpp  test_rank_select_common.hpp  test_rs_bit_vector.cpp  test_topk_vector.cpp  topk_vector.hpp  util.hpp  (+1 more)
perftest/: .gitignore  CMakeLists.txt  perftest_bp_vector.cpp  perftest_bp_vector_rmq.cpp  perftest_cartesian_tree.cpp  perftest_common.hpp  perftest_elias_fano.cpp
